# MarkdownFTXUI

./: CMakeLists.txt  LICENSE  README.md  plan.md
.github/workflows/: ci.yml
demo/: CMakeLists.txt  common.hpp  main.cpp  screen_depth.cpp  screen_editor.cpp  screen_email.cpp  screen_newsletter.cpp  screen_viewer.cpp  screens.hpp
docs/: api-reference.md  architecture.md  building.md  demos.md  design-decisions.md  testing.md
markdown/: CMakeLists.txt
markdown/include/markdown/: ast.hpp  dom_builder.hpp  editor.hpp  highlight.hpp  parser.hpp  scroll_frame.hpp  text_utils.hpp  theme.hpp  viewer.hpp
markdown/src/: dom_builder.cpp  editor.cpp  highlight.cpp  parser_cmark.cpp  viewer.cpp
markdown/tests/: CMakeLists.txt  test_bold.cpp  test_bold_italic.cpp  test_code.cpp  test_dom_builder.cpp  test_dom_focus.cpp  test_edge_cases.cpp  test_editor.cpp  test_editor_scroll.cpp  test_external_focusable.cpp  test_hard_break.cpp  test_headings.cpp  test_helper.hpp  test_highlight.cpp  test_highlight_cursor.cpp  test_image.cpp  test_italic.cpp  test_links.cpp  test_lists.cpp  test_mega_paragraph.cpp  test_mixed.cpp  test_mouse_click.cpp  test_parser.cpp  test_perf_editor.cpp  test_perf_parse_build.cpp  test_perf_scroll.cpp  test_perf_unicode.cpp  test_perf_viewer.cpp  test_quotes.cpp  test_scroll_frame.cpp  test_snippets.cpp  test_stress.cpp  test_tab_exit.cpp  test_text_utils.cpp  test_thematic_break.cpp  test_theme.cpp  test_trivial.cpp  test_unicode.cpp  test_viewer.cpp  test_viewer_scroll.cpp
markdown/tests/snippets/: email1.md  email2.md
